# data-stuff

./: .gitignore
notebooks/: infer.ipynb  pyproject.toml  requirements.txt
notebooks/data/: Condition.json  Notes  Patient.json  Procedure.ndjson  condition_schema.json  patient_schema.json
