[tool.poetry]
name = "hackaithon"
version = "0.1.0"
description = ""
authors = ["Smith Mathieu <r.smith.mathieu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
langchain = "^0.0.171"
genson = "^1.2.2"
psycopg2 = "^2.9.6"
python-dotenv = "^1.0.0"
matplotlib = "^3.7.1"
streamlit = "^1.22.0"
openai = "^0.27.6"
guidance = "^0.0.46"
jupyter = "^1.0.0"
chromadb = "^0.3.23"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
